# rusty-kafka

./: Cargo.toml  Makefile  README.md
.github/workflows/: docker-publish.yml  docker-release.yml  helm-publish.yaml  helm-release.yaml
benches/: avro_serialisation.rs
charts/: job-inject.yaml  kafka-chase-sample.yaml  pod-inject-bill.yaml  pod-inject-chaser.yaml  pod-inject-failure.yaml  pod-inject-payment.yaml  pod-inject.yaml
charts/kafka-chase/: Chart.yaml  values.yaml
charts/kafka-chase/configs/: config.yaml
charts/kafka-chase/templates/: NOTES.txt  _helpers.yaml  authorizationpolicy.yaml  configmap.yaml  deployment.yaml  hpa.yaml  job-schema.yaml  requestauthorization.yaml  service.yaml  serviceaccount.yaml
container/: Cargo.toml  Dockerfile
container/src/: chase.rs  config.rs  consume.rs  error.rs  lib.rs  main.rs  metrics.rs  produce.rs  tokio_tools.rs
container/src/avro/: rd_produce.rs
container/src/chaser/: chase.rs  error.rs  main.rs  produce.rs
container/src/chaser/schemas/: billing.rs  mod.rs
container/src/old-code/: produce.rs
container/src/schemas/: billing.rs  chaser.rs  mod.rs
container/test_data/: config.yaml
fluxcd-dev/: app-kafka-chase.yaml
src/: avro_serde.rs  avro_serdes.rs  consume.rs  example_utils.rs  produce.rs  rd_consume.rs  rd_produce.rs  schema_registry.rs
src/avro/: rd_consume.rs  rd_produce.rs  structures.rs
src/chaser/: chase.rs  chase_structures.rs  produce.rs
