[package]
name = "avro-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
kafka = "0.9.0"
rdkafka = "0.29.0"
# rdkafka = { version = "0.29", features = ["dynamic-linking"] }  # Dynamic linking
tokio = { version = "1.24.1", features = ["full"] }
env_logger = "~0.9"
log = {version = "~0.4", features = ["release_max_level_info"]}
chrono = "0.4.23"
schema_registry_converter = "3.1.0"
serde ={ version= "1.0.152", features = ['derive'] }
apache-avro = { version = "0.14.0", features = ["derive"] }


[[bin]]
name = "produce"
path = "src/produce.rs"

[[bin]]
name = "consume"
path = "src/consume.rs"

[[bin]]
name = "rd_produce"
path = "src/rd_produce.rs"

[[bin]]
name = "rd_consume"
path = "src/rd_consume.rs"

[[bin]]
name = "avro_serde"
path = "src/avro_serde.rs"

[[bin]]
name = "schema_registry"
path = "src/schema_registry.rs"


[dev-dependencies]
criterion = { version = "~0.3", features = ["html_reports"] }

[[bench]]
name = "avro_serialisation"
harness = false
