[package]
name = "avro-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.3", features = ["derive"] }
kafka = "~0.9"
rdkafka = "~0.33"
# rdkafka = { version = "0.29", features = ["dynamic-linking"] }  # Dynamic linking
tokio = { version = "~1.29", features = ["full"] }
env_logger = "~0.10"
log = {version = "~0.4", features = ["release_max_level_info"]}
chrono = "~0.4"
schema_registry_converter = "~3.1"
serde ={ version= "~1.0", features = ['derive'] }
apache-avro = { version = "~0.15", features = ["derive"] }
rand = "~0.8"
# futures-util = "0.3.25"
futures = "~0.3"


[[bin]]
name = "produce"
path = "src/produce.rs"

[[bin]]
name = "consume"
path = "src/consume.rs"

[[bin]]
name = "rd_produce"
path = "src/rd_produce.rs"

[[bin]]
name = "rd_consume"
path = "src/rd_consume.rs"

[[bin]]
name = "avro_serde"
path = "src/avro_serde.rs"

[[bin]]
name = "schema_registry"
path = "src/schema_registry.rs"

[[bin]]
name = "avro_rd_produce"
path = "src/avro/rd_produce.rs"

[[bin]]
name = "avro_rd_consume"
path = "src/avro/rd_consume.rs"

[[bin]]
name = "chaser"
path = "src/chaser/chase.rs"

[dev-dependencies]
criterion = { version = "~0.5", features = ["html_reports"] }

[[bench]]
name = "avro_serialisation"
harness = false
