[package]
name = "kafka-chase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
kafka = "~0.10"
rdkafka = "~0.38"
# rdkafka = { version = "0.29", features = ["dynamic-linking"] }  # Dynamic linking
tokio = { version = "^1.49", features = ["full"] }
env_logger = "~0.11"
log = {version = "^0.4", features = ["release_max_level_info"]}
chrono = "~0.4"
schema_registry_converter = "~4.7"
serde ={ version= "^1.0", features = ['derive'] }
apache-avro = { version = "^0.21", features = ["derive"] }
rand = "~0.9"
# futures-util = "0.3.25"
futures = "~0.3"
serde_json = "^1.0"
thiserror = "^2.0"

# [[bin]]
# name = "produce"
# path = "src/produce.rs"

# [[bin]]
# name = "consume"
# path = "src/consume.rs"

# [[bin]]
# name = "rd_produce"
# path = "src/rd_produce.rs"

# [[bin]]
# name = "rd_consume"
# path = "src/rd_consume.rs"

# [[bin]]
# name = "avro_serde"
# path = "src/avro_serde.rs"

# [[bin]]
# name = "schema_registry"
# path = "src/schema_registry.rs"

# [[bin]]
# name = "avro_rd_produce"
# path = "src/avro/rd_produce.rs"

# [[bin]]
# name = "avro_rd_consume"
# path = "src/avro/rd_consume.rs"

[[bin]]
name = "kafka-chase"
path = "src/chaser/chase.rs"

[dev-dependencies]
criterion = { version = "~0.8", features = ["html_reports"] }

[[bench]]
name = "avro_serialisation"
harness = false
