[package]
name = "kafka-chase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "^0.4", features = ["release_max_level_info"]}
clap = { version = "^4.5", features = ["derive"] }

kafka = "~0.10"
rdkafka = "~0.38"

# rdkafka = { version = "0.29", features = ["dynamic-linking"] }  # Dynamic linking

env_logger = "~0.11"
figment = { version = "^0.10", features = ["yaml", "env"] }
figment_file_provider_adapter = "~0.1"
serde ={ version= "^1.0", features = ['derive'] }
serde_json = "^1.0"
tokio = { version = "^1.49", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.44"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }

thiserror = "^2.0"



chrono = "^0.4"
schema_registry_converter = "~4.7"
apache-avro = { version = "^0.21", features = ["derive"] }
rand = "~0.9"
futures = "~0.3"
uuid = { version = "1.19.0", features = ["v4"] }
prometheus = "0.14.0"
url = { version = "2.5", features = ["serde"] }

hamsrs = { git = "https://github.com/PolecatWorks/hams.git" }
ffi-log2 = { git = "https://github.com/PolecatWorks/hams.git" }


# [[bin]]
# name = "produce"
# path = "src/produce.rs"

# [[bin]]
# name = "consume"
# path = "src/consume.rs"

# [[bin]]
# name = "rd_produce"
# path = "src/rd_produce.rs"

# [[bin]]
# name = "rd_consume"
# path = "src/rd_consume.rs"

# [[bin]]
# name = "avro_serde"
# path = "src/avro_serde.rs"

# [[bin]]
# name = "schema_registry"
# path = "src/schema_registry.rs"

# [[bin]]
# name = "avro_rd_produce"
# path = "src/avro/rd_produce.rs"

# [[bin]]
# name = "avro_rd_consume"
# path = "src/avro/rd_consume.rs"

# [[bin]]
# name = "kafka-chase"
# path = "src/chaser/main.rs"

[dev-dependencies]
criterion = { version = "~0.8", features = ["html_reports"] }

[[bench]]
name = "avro_serialisation"
harness = false
